--- a/applications/app/blink/CMakeLists.txt
+++ b/applications/app/blink/CMakeLists.txt
@@ -1,9 +1,8 @@
 cmake_minimum_required(VERSION 3.20.0)
 set(CMAKE_C_STANDARD 11)
 
-
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
-project(app LANGUAGES C)
+project(blink LANGUAGES C)
 
 target_sources(app PRIVATE src/main.c)
