--- a/applications/drivers/sensor/Kconfig
+++ b/applications/drivers/sensor/Kconfig
@@ -1,3 +1,9 @@
 if SENSOR
+
+rsource "amt21/Kconfig"
+rsource "hall-rpm/Kconfig"
 rsource "jy901b/Kconfig"
+rsource "p51-curr/Kconfig"
+rsource "zx/Kconfig"
+
 endif # SENSOR
