updated to zephyr 3.7.0-rc3 and canopennode

--- a/applications/drivers/Kconfig
+++ b/applications/drivers/Kconfig
@@ -1,6 +1,8 @@
 menu "Drivers"
 
 rsource "gpio/Kconfig"
+rsource "gpio/Kconfig"
+rsource "led/Kconfig"
 rsource "sensor/Kconfig"
 rsource "servo/Kconfig"
 
