--- a/applications/boards/st/nucleo_g431kb/nucleo_g431kb_defconfig
+++ b/applications/boards/st/nucleo_g431kb/nucleo_g431kb_defconfig
@@ -1,5 +1,4 @@
-CONFIG_SOC_SERIES_STM32G4X=y
-CONFIG_SOC_STM32G431XX=y
+# SPDX-License-Identifier: Apache-2.0
 
 # enable uart driver
 CONFIG_SERIAL=y
