--- a/applications/dts/bindings/sensor/ssi,p51-curr.yaml
+++ b/applications/dts/bindings/sensor/ssi,p51-curr.yaml
@@ -21,3 +21,9 @@ properties:
     required: true
     description: |
       Value of the shunt resistor in milli-ohms.
+  tolerance:
+    type: int
+    default: 5
+    description: |
+      Current value tolerance before it's considered out
+      of valid range and errors in percent.
