--- a/applications/dts/bindings/sensor/ssi,p51-curr.yaml
+++ b/applications/dts/bindings/sensor/ssi,p51-curr.yaml
@@ -26,4 +26,4 @@ properties:
     default: 5
     description: |
       Current value tolerance before it's considered out
-      of valid range and errors in percent.
+      of valid range and in percentage.
