--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,7 @@
     "recommendations": [
         "cschlosser.doxdocgen",
         "marus25.cortex-debug",
-        "ms-vscode.cpptools-extension-pack",
-        "ms-python.python",
-        "ms-python.vscode-pylance",
+        "ms-vscode.cpptools",
         "plorefice.devicetree",
         "twxs.cmake",
         "webfreak.debug",
