bug fix: openocd LIBUSE_ERROR_ACCESS

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,9 +2,8 @@
     "recommendations": [
         "cschlosser.doxdocgen",
         "marus25.cortex-debug",
-        "ms-vscode.cpptools",
+        "ms-vscode.cpptools-extension-pack",
         "plorefice.devicetree",
-        "twxs.cmake",
         "webfreak.debug",
         "xaver.clang-format",
     ]
